--- a/src/index.njk
+++ b/src/index.njk
@@ -4,11 +4,21 @@ title: LIBRETA DE VIAJE
 subtitle: Viaja para volver sin volver
 path: home
 ---
-<h1 id="index-title">
-    {{ title }}
-</h1>
-<h4 id="index-subtitle">
-    {{ subtitle }}
+
+<!--HERO BANNER-->
+<div class="main-banner-container">
+    <div class="main-banner-txt-container">
+        <h1 id="index-title">
+            {{ title }}
+        </h1>
+        <h4 id="index-subtitle">
+            {{ subtitle }}
+        </h4>
+    </div>
+</div>
+
+<h4 id="paises-visitados">
+    Paises visitados
 </h4>
 
 <div id="sectionpais" style="display: grid; grid-template-columns: repeat(5, 1fr); grid-auto-rows: auto; grid-gap: 10px; justify-items: center;">
@@ -22,7 +32,7 @@ path: home
     {% endif %}
 </div>
 
-<!--Lista de paises-->
+<!--CARTAS DE ARTICULOS-->
 {% set numero_de_articulos = 3 %}
 {% set conteo = 0 %}
 <div class="cards-container">
@@ -40,4 +50,48 @@ path: home
             {% set conteo = conteo + 1 %}
         {% endif %}
     {% endfor %}
+</div>
+
+<!--LEER MAS-->
+<div class="g-button-container">
+    <div class="button-container">
+        <a href="posts/" class="custom-button">LEER MAS</a>
+        <div class="bottom-rectangle"></div>
+    </div>
+</div>
+
+<!--BANDEAU GUIAS-->
+<div class="bander-container">
+    <div class="guias-img-container">
+        <h4>GUIAS DE VIAJE</h4>
+        <p>Planning para visitar los sitios mas chulos sin dolor de cabeza</p>
+    </div>
+</div>
+
+<!--CARTAS DE GUIAS-->
+{% set numero_de_guias = 3 %}
+{% set conteo_guias = 0 %}
+<div class="cards-container">
+    {% for post in collections.post %}
+        {% if conteo_guias < numero_de_guias %}
+            <div class="article-card">
+                <img src="{{ post.data.image }}" alt="{{ post.data.image_alt }}">
+
+                <h2>
+                    <a href="{{post.url}}">{{ post.data.title }}</a>
+
+                </h2>
+                <div class="article-card-description">{{ post.data.description }}</div>
+            </div>
+            {% set conteo_guias = conteo_guias + 1 %}
+        {% endif %}
+    {% endfor %}
+</div>
+
+<!--LEER MAS GUIAS-->
+<div class="g-button-container">
+    <div class="button-container">
+        <a href="posts/" class="custom-button">LEER MAS</a>
+        <div class="bottom-rectangle"></div>
+    </div>
 </div>
