--- a/src/static/css/base/reset.css
+++ b/src/static/css/base/reset.css
@@ -19,7 +19,7 @@ html,
 body {
     margin: 0;
     height: 100%;
-    background-color: rgba(255, 199, 0, 0.03);
+    background-color: #FFFDF7;
 }
 
 h1,
