--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -5,6 +5,34 @@
 /* NAVBAR */
 @import url("navbar/navbar.css");
 
+/* FOOTER */
+@import url("footer/footer.css");
+
+/* LISTS */
+@import url("lists/lists.css");
+
+/* HERO BANNER */
+.main-banner-container {
+    margin: 50px;
+    height: 500px;
+    /* Set height to full viewport height */
+    background-image: url('/static/img/map.svg');
+    /* Replace 'your-image.jpg' with your image path */
+    background-size: cover;
+    /* Cover the entire container with the background image */
+    background-position: center;
+    /* Center the background image */
+    display: flex;
+    justify-content: center;
+    /* Center horizontally */
+    align-items: center;
+    /* Center vertically */
+}
+
+.main-banner-txt-container {
+    text-align: center;
+}
+
 /* INDEX PAGE*/
 #index-title {
     font-weight: 400;
@@ -26,6 +54,18 @@
     text-align: center;
     margin-bottom: 100px;
 }
+
+#paises-visitados {
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 24px;
+    /* identical to box height */
+    letter-spacing: 0.05em;
+    text-align: center;
+    margin-top: 70px;
+    margin-bottom: 50px;
+}
+
 
 /* CARTAS DE ARTICULOS */
 .cards-container {
@@ -67,6 +107,7 @@
     height: auto;
     /* Maintain the aspect ratio */
     margin: 0;
+    opacity: 0.85;
 }
 
 .article-card h2 {
@@ -90,3 +131,87 @@
 }
 
 /* LEER MAS */
+.g-button-container {
+    display: flex;
+    justify-content: center;
+    /* Center horizontally */
+    align-items: center;
+    /* Center vertically */
+    margin: 70px;
+}
+
+.button-container {
+    position: relative;
+    display: inline-block;
+}
+
+.custom-button {
+    position: relative;
+    width: 200px;
+    height: 50px;
+    z-index: 2;
+    background-color: rgba(255, 254, 250, 1);
+    border: 2px solid #666;
+    text-align: center;
+    display: inline-flex;
+    justify-content: center;
+    /* Center horizontally */
+    align-items: center;
+    /* Center vertically */
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.custom-button:hover {
+    background-color: #f2f2f2;
+}
+
+.bottom-rectangle {
+    width: 200px;
+    height: 50px;
+    z-index: 1;
+    position: absolute;
+    bottom: -5px;
+    left: -5px;
+    background-color: #666;
+}
+
+/* BANDEAUX */
+.bander-container {
+    margin: 70px;
+    height: 250px;
+    /* Set height to full viewport height */
+    background-image: url('/static/img/pescatore.jpeg');
+    opacity: 0.85;
+    /* Replace 'your-image.jpg' with your image path */
+    background-size: cover;
+    /* Cover the entire container with the background image */
+    background-position: center;
+    /* Center the background image */
+    display: flex;
+    justify-content: center;
+    /* Center horizontally */
+    align-items: center;
+    /* Center vertically */
+}
+
+.guias-img-container {
+    text-align: center;
+    /* Center text horizontally */
+    color: #f2f2f2;
+    opacity: 1;
+    /* Text color */
+    font-size: 50px;
+    font-weight: 300;
+    letter-spacing: 0.05em;
+}
+
+.guias-img-container h4 {
+    color: #f2f2f2;
+}
+
+.guias-img-container p {
+    color: #f2f2f2;
+    font-size: 20px;
+}
