--- a/src/index.njk
+++ b/src/index.njk
@@ -91,7 +91,7 @@ path: home
 <!--LEER MAS GUIAS-->
 <div class="g-button-container">
     <div class="button-container">
-        <a href="posts/" class="custom-button">LEER MAS</a>
+        <a href="guias/" class="custom-button">LEER MAS</a>
         <div class="bottom-rectangle"></div>
     </div>
 </div>
