--- a/src/_includes/posts.njk
+++ b/src/_includes/posts.njk
@@ -2,16 +2,11 @@
 layout: default
 prism: true
 ---
-<!--BANDEAU-->
-<div class="bander-container" id="main-img-post">
-    <div class="guias-img-container"></div>
-</div>
 
 <div class="main-article-content">
-    <!--HERO BANNER-->
     <div class="posts-banner-container">
         <div class="posts-banner-txt-container">
-            <h1 id="index-title">
+            <h1 id="post-index-title">
                 {{ title }}
             </h1>
             <p>
@@ -22,7 +17,7 @@ prism: true
 
                 </time>
             </p>
-            <h4 id="index-subtitle">
+            <h4 id="post-index-subtitle">
                 {{ description }}
             </h4>
 
