--- a/src/static/css/lists/lists.css
+++ b/src/static/css/lists/lists.css
@@ -1,5 +1,5 @@
 .posts-banner-container {
-    margin-top: 10%;
+    margin-top: 100px;
     height: 50px;
     display: flex;
     justify-content: center;
@@ -14,11 +14,11 @@
 
 .list-posts {
     margin: 10%;
-    margin-top: 5%;
+    margin-top: 30px;
 }
 
 .list-posts-element {
-    margin-bottom: 5%;
+    margin-bottom: 30px;
 }
 
 .post-info {
