--- a/src/static/css/style copy.css
+++ b/src/static/css/style copy.css
@@ -2,6 +2,7 @@
 @import url("base/reset.css");
 @import url("base/typography.css");
 
+
 /* NAVBAR */
 @import url("navbar/navbar.css");
 
@@ -69,44 +70,17 @@
     margin-bottom: 50px;
 }
 
-#sectionpais {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-auto-rows: auto;
-    grid-gap: 10px;
-    justify-items: center
-}
-
-@media (max-width: 700px) {
-    #sectionpais {
-        grid-template-columns: repeat(4, 1fr);
-        /* Four equal columns */
-    }
-}
 
 /* CARTAS DE ARTICULOS */
-
 .cards-container {
+    display: flex;
+    justify-content: space-between;
     margin-top: 100px;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    justify-items: center;
-    /* Center items horizontally */
-    align-items: center;
-    /* Center items vertically */
-}
-
-@media (max-width: 700px) {
-    .cards-container {
-        grid-template-columns: 1fr;
-        grid-template-rows: repeat(3, auto);
-        gap: 5%;
-        margin-bottom: 170px;
-    }
+    /* Adjust spacing between cards */
 }
 
 .article-card {
-    width: calc(70%);
+    width: calc(100% / 3 - 10%);
     height: 400px;
     /* Adjust the width as needed */
     padding: 0;
@@ -122,18 +96,19 @@
     /* Scale up the card when hovered */
 }
 
+.article-card:first-child {
+    margin-left: 70px;
+}
+
+.article-card:last-child {
+    margin-right: 70px;
+}
+
 .article-card img {
     display: block;
     width: 100%;
-    /* Make sure the image covers the container */
-    height: 100%;
-    /* Make sure the image covers the container */
-    object-fit: cover;
-    /* Crop the image to fit the container */
-    object-position: center;
-    /* Center the image within the container */
-    min-height: 40%;
-    max-height: 50%;
+    /* Ensure the image fills the entire width of its parent container */
+    height: auto;
     /* Maintain the aspect ratio */
     margin: 0;
     opacity: 0.85;
@@ -154,7 +129,7 @@
     color: #666;
     overflow: hidden;
     display: -webkit-box;
-    -webkit-line-clamp: 4;
+    -webkit-line-clamp: 5;
     /* Adjust the number of lines to show */
     -webkit-box-orient: vertical;
 }
@@ -208,6 +183,7 @@
 
 /* BANDEAUX */
 .bander-container {
+    margin: 70px;
     height: 250px;
     /* Set height to full viewport height */
     background-image: url('/static/img/pescatore.jpeg');
