--- a/src/index.njk
+++ b/src/index.njk
@@ -18,7 +18,7 @@ path: home
 </div>
 
 <h4 id="paises-visitados">
-    Paises visitados
+    Busca articulo por pais
 </h4>
 
 <div id="sectionpais">
@@ -43,8 +43,15 @@ path: home
 
                 <h2>
                     <a href="{{post.url}}">{{ post.data.title }}</a>
-
                 </h2>
+                <p>
+                    <time>
+                        {{ post.data.date | readableDate }}
+                    by
+                    <a>{{ post.data.author }}</a>
+
+                    </time>
+                </p>
                 <div class="article-card-description">{{ post.data.description }}</div>
             </div>
             {% set conteo = conteo + 1 %}
