--- a/src/index.njk
+++ b/src/index.njk
@@ -79,7 +79,7 @@ path: home
 {% set numero_de_guias = 3 %}
 {% set conteo_guias = 0 %}
 <div class="cards-container">
-    {% for post in collections.post %}
+    {% for post in collections.guia %}
         {% if conteo_guias < numero_de_guias %}
             <div class="article-card">
                 <img src="{{ post.data.image }}" alt="{{ post.data.image_alt }}">
