--- a/src/static/css/post/post.css
+++ b/src/static/css/post/post.css
@@ -4,8 +4,21 @@
     margin-left: 20%;
 }
 
+@media (max-width: 750px) {
+    .main-article-content {
+        margin-right: 10%;
+        margin-left: 10%;
+    }
+}
+
 .main-article-content-txt {
     margin-top: 50px;
+}
+
+@media (max-width: 750px) {
+    .main-article-content-txt {
+        margin-top: 15px;
+    }
 }
 
 .main-article-content-txt h1,
@@ -44,14 +57,25 @@ h6 {
 
 .main-article-content-txt p {
     font-size: 1.25em;
+    text-align: left;
 }
 
+/* IMAGE IN THE BLOG CONTENT */
 .main-article-content-txt img {
     width: 60%;
-    height: 60%;
+    height: auto;
+    opacity: 0.95;
+    margin-top: 20px;
+    margin-left: 20%;
+    text-align: center;
 }
 
-
+@media (max-width: 750px) {
+    .main-article-content-txt img {
+        width: 90%;
+        margin-left: 5%;
+    }
+}
 
 .indi-post-banner-container {
     display: flex;
