--- a/src/contacto.njk
+++ b/src/contacto.njk
@@ -1,15 +1,5 @@
 ---
 title: CONTACTO
-subtitle: Si quieres mas info sobre un tema que te ha interesado
-layout: default
-prism: true
+description: Si quereis mas informacion, nos podeis contactar aqui. To be completed ...
+layout: posts
 ---
-
-enlace de compra de guia digital
-
-email
-
-instagram
-
-youtube
-
