--- a/src/sobrenos.njk
+++ b/src/sobrenos.njk
@@ -1,12 +1,5 @@
 ---
 title: SOBRE NOS
-subtitle: Los dos firulais detras de este blog
-layout: default
-prism: true
+description: Los dos firulais detras de este blog. To be completed ...
+layout: posts
 ---
-
-Inma
-
-and
-
-Romain
