--- a/src/static/css/lists/lists.css
+++ b/src/static/css/lists/lists.css
@@ -18,15 +18,15 @@
 }
 
 .list-posts-element {
-    margin-bottom: 30px;
+    margin-bottom: 55px;
 }
 
 .post-info {
-    font-size: 12px;
+    font-size: 0.8em;
 }
 
 .list-posts h2 {
-    font-size: 24px;
+    font-size: 2em;
 }
 
 /* LEER */
