--- a/src/index.njk
+++ b/src/index.njk
@@ -86,16 +86,16 @@ path: home
 
                 <h2>
                     <a href="{{post.url}}">{{ post.data.title }}</a>
-
                 </h2>
-                <p>
-                    <time>
-                        {{ post.data.date | readableDate }}
-                    by
-                    <a>{{ post.data.author }}</a>
-
-                    </time>
-                </p>
+                {% if post.data.date %}
+                    <p>
+                        <time>
+                            {{ post.data.date | readableDate }}
+                        </time>
+                        by
+                        <a>{{ post.data.author }}</a>
+                    </p>
+                {% endif %}
                 <div class="article-card-description">{{ post.data.description }}</div>
             </div>
             {% set conteo_guias = conteo_guias + 1 %}
