create list articles for every country

--- a/src/articulos/mexico.njk
+++ b/src/articulos/mexico.njk
@@ -1,8 +1,9 @@
 ---
 title: ARTICULOS
-subtitle: Historias de viaje. Sentimientos y reflexiones
+subtitle: Articulos sobre Mexico
 layout: default
 ---
+
 <!--HERO BANNER-->
 <div class="posts-banner-container">
     <div class="posts-banner-txt-container">
@@ -16,7 +17,7 @@ layout: default
 </div>
 
 <section class="list-posts">
-    {% set postslist = collections.post %}
+    {% set postslist = collections.mexico %}
 
     {% for post in postslist | reverse %}
         <article class="list-posts-element">
