change logo, fix links

--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -9,13 +9,13 @@
                 <h3>Categorias</h3>
                 <ul>
                     <li>
-                        <a href="/posts/">Articulos</a>
+                        <a href="/articulos">Articulos</a>
                     </li>
                     <li>
-                        <a href="/guias/">Guias</a>
+                        <a href="/guias">Guias</a>
                     </li>
                     <li>
-                        <a href="/experiencias/">Experiencias</a>
+                        <a href="/experiencias">Experiencias</a>
                     </li>
                     <!-- Add more categories as needed -->
                 </ul>
