--- a/src/index.njk
+++ b/src/index.njk
@@ -62,7 +62,7 @@ path: home
 <!--LEER MAS-->
 <div class="g-button-container">
     <div class="button-container">
-        <a href="posts/" class="custom-button">LEER MAS</a>
+        <a href="articulos/" class="custom-button">LEER MAS</a>
         <div class="bottom-rectangle"></div>
     </div>
 </div>
