--- a/src/_includes/default.njk
+++ b/src/_includes/default.njk
@@ -13,6 +13,8 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abril+Fatface&display=swap">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato&display=swap">
         <link rel="stylesheet" type="text/css" href="/static/css/style.css">
+        <link rel="icon" type="image/svg+xml" href="/static/img/favicon/favicon.svg">
+        <link rel="icon" type="image/png" href="/static/img/favicon/favicon.png">
     </head>
     <body>
         {% include "./partials/navbar.njk" %}
