--- a/src/experiencias.njk
+++ b/src/experiencias.njk
@@ -16,7 +16,7 @@ layout: default
 </div>
 
 <section class="list-posts">
-    {% set postslist = collections.post %}
+    {% set postslist = collections.experiencia %}
 
     {% for post in postslist | reverse %}
         <article class="list-posts-element">
