add google verification

--- a/src/_includes/default.njk
+++ b/src/_includes/default.njk
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="google-site-verification" content="D_DNjsGC0W5fLqgQmxGthjjPvlSAMjmqjBs5C_NO9Ok"/>
         <title>
             {{title}}
         </title>
