--- a/src/_includes/default.njk
+++ b/src/_includes/default.njk
@@ -5,17 +5,14 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="google-site-verification" content="D_DNjsGC0W5fLqgQmxGthjjPvlSAMjmqjBs5C_NO9Ok"/>
-        <title>
-            {{title}}
-        </title>
-        {% if description %}
-            <meta name="description" content="{{description}}">
-        {% endif %}
+
+        <title>Libreta de Viaje - Guías y relatos de viajes</title>
+        <meta name="description" content="Viaja para volver sin volver. Porque no vuelves igual de cada viaje. Explora rutas viajeras, pequeñas guías y relatos para descubrir el mundo en un día."/>
+
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abril+Fatface&display=swap">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato&display=swap">
         <link rel="stylesheet" type="text/css" href="/static/css/style.css">
-        <link rel="icon" type="image/svg+xml" href="/static/img/favicon/favicon.svg">
-        <link rel="icon" type="image/png" href="/static/img/favicon/favicon.png">
+        <link rel="icon" type="image/png" href="/static/img/favicon/favicon-logo.png">
     </head>
     <body>
         {% include "./partials/navbar.njk" %}
